--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+
+.dataratio {
+    width: 100%;
+    height: 20rem;
+    background-color: #ffaaaa;
+    margin: 0 auto;
+}
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.flex-spacer {
+    flex: 1 1 auto;
+}
+
+mat-sidenav {
+    width: 100%;
+
+    @media screen and (min-width: 768px) {
+        width: 350px;
+    }
+}
+
+.sidenav-container.mat-drawer-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
